force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__ControlledSampleEligibilityStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__ControlledSampleEligibilityStatus__c</fullName>
    <description>Displays the status of the address&apos;s eligibility to receive controlled substances. This allows the Rep to identify if the address is able to receive samples of controlled substances or not, and the status the eligibility falls into.</description>
    <inlineHelpText>Displays the status of the address&apos;s eligibility to receive controlled substances. This allows the Rep to identify if the address is able to receive samples of controlled substances or not, and the status the eligibility falls into.</inlineHelpText>
    <label>Controlled Sample Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Grace Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>