force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Country__c.field-meta.xml
<CustomField>
    <fullName>OCE__Country__c</fullName>
    <description>Country of the address.</description>
    <formula>TEXT( OCE__Address__r.OCE__CountryCode__c )</formula>
    <inlineHelpText>Country of the address.</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>