force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__CspExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__CspExpirationDate__c</fullName>
    <description>Expiration date of the state specific controlled substance number.</description>
    <inlineHelpText>Expiration date of the state specific controlled substance number.</inlineHelpText>
    <label>CSP Expiration Date</label>
    <type>Date</type>
</CustomField>