force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__CspNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__CspNumber__c</fullName>
    <description>State specific controlled substance number. For example, a CDS is required for Accounts receiving samples of controlled substances in New Jersey, and the CSP and CSR may be required in other states (in addition to the DEA #).</description>
    <inlineHelpText>State specific controlled substance number. For example, a CDS is required for Accounts receiving samples of controlled substances in New Jersey, and the CSP and CSR may be required in other states (in addition to the DEA #).</inlineHelpText>
    <label>CSP #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>