force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__CspPrivilegeName__c.field-meta.xml
<CustomField>
    <fullName>OCE__CspPrivilegeName__c</fullName>
    <description>The name of the Controlled Substances Privilege. There are multiple schedules of controlled substances and this signifies the name of the controlled substance privilege that is available at this HCP/Address.</description>
    <inlineHelpText>The name of the Controlled Substances Privilege. There are multiple schedules of controlled substances and this signifies the name of the controlled substance privilege that is available at this HCP/Address.</inlineHelpText>
    <label>CSP Privilege Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>