force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__CspStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__CspStatus__c</fullName>
    <description>The current status of the CSP license, such as Revoked, Expired, Inactive, Suspended, Active.</description>
    <inlineHelpText>The current status of the CSP license, such as Revoked, Expired, Inactive, Suspended, Active.</inlineHelpText>
    <label>CSP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>