force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__CspType__c.field-meta.xml
<CustomField>
    <fullName>OCE__CspType__c</fullName>
    <description>Controlled Substances Privilege Type. There are multiple schedules of controlled substances and this signifies the type of controlled substance privilege that is available at this HCP/Address.</description>
    <inlineHelpText>Controlled Substances Privilege Type. There are multiple schedules of controlled substances and this signifies the type of controlled substance privilege that is available at this HCP/Address.</inlineHelpText>
    <label>CSP Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>