force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEA__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEA__c</fullName>
    <description>Drug Enforcement Administration number. This is required for addresses which will receive samples of controlled substances.</description>
    <inlineHelpText>Drug Enforcement Administration number. This is required for addresses which will receive samples of controlled substances.</inlineHelpText>
    <label>DEA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>