force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DeaExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeaExpirationDate__c</fullName>
    <description>Date the DEA # expires.</description>
    <inlineHelpText>Date the DEA # expires.</inlineHelpText>
    <label>DEA Expiration Date</label>
    <type>Date</type>
</CustomField>