force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEAExpirationDateIms__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEAExpirationDateIms__c</fullName>
    <description>Copy DEA Expiration Date from Address.</description>
    <formula>OCE__Address__r.OCE__DEAExpirationDateIms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEAExpirationDateIms</label>
    <type>Date</type>
</CustomField>