force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEAFormulaDashboard__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEAFormulaDashboard__c</fullName>
    <description>DEA Formula field use on dashboard</description>
    <formula>IF(
!ISBLANK(OCE__DEA__c),
&apos;&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DEA Formula field use on dashboard</inlineHelpText>
    <label>DEA</label>
    <type>Text</type>
</CustomField>