force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEALicense__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEALicense__c</fullName>
    <description>Copy DEA Number from Address.</description>
    <formula>OCE__Address__r.OCE__DEALicense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEA License #</label>
    <type>Text</type>
</CustomField>