force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DeaLicenseAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeaLicenseAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the address is an address with a DEA License. This allows the Rep to easily identify if this address can receive controlled substances.</description>
    <inlineHelpText>Indicates that the address is an address with a DEA License. This allows the Rep to easily identify if this address can receive controlled substances.</inlineHelpText>
    <label>DEA License Address</label>
    <type>Checkbox</type>
</CustomField>