force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEALicenseValidation__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEALicenseValidation__c</fullName>
    <description>Copy DEA Validation from Address.</description>
    <formula>OCE__Address__r.OCE__DEALicenseValidation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEA License Validation</label>
    <type>Checkbox</type>
</CustomField>