force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEALicenseValidationIcon__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEALicenseValidationIcon__c</fullName>
    <description>Copy DEA Validation Icon from Address.</description>
    <formula>OCE__Address__r.OCE__DEALicenseValidationIcon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEA License Validation Icon</label>
    <type>Text</type>
</CustomField>