force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DEASchedule__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEASchedule__c</fullName>
    <description>Displays what controlled samples the doctor is approved to receive at the address. This allows the Rep to understand what they can and cannot sample to the address.</description>
    <inlineHelpText>Displays what controlled samples the doctor is approved to receive at the address. This allows the Rep to understand what they can and cannot sample to the address.</inlineHelpText>
    <label>DEA Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>