force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DeaStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeaStatus__c</fullName>
    <description>Indicates the current status of the DEA License (Active, Inactive, Revoked, Probation). This allows the Rep to identify if this address has an approved DEA License or not.</description>
    <inlineHelpText>Indicates the current status of the DEA License (Active, Inactive, Revoked, Probation). This allows the Rep to identify if this address has an approved DEA License or not.</inlineHelpText>
    <label>DEA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>