force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__DeliveryConfidence__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeliveryConfidence__c</fullName>
    <description>Comes from HCRS data and is the confidence level related to using this address for postal deliveries. Values include: High, Medium, Low, or Unknown.</description>
    <inlineHelpText>Comes from HCRS data and is the confidence level related to using this address for postal deliveries. Values include: High, Medium, Low, or Unknown.</inlineHelpText>
    <label>Delivery Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>