force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Email3__c.field-meta.xml
<CustomField>
    <fullName>OCE__Email3__c</fullName>
    <description>Alternate email.</description>
    <inlineHelpText>Alternate email.</inlineHelpText>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>