force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__EmailRestriction__c.field-meta.xml
<CustomField>
    <fullName>OCE__EmailRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores Email Restriction</description>
    <inlineHelpText>Stores Email Restriction</inlineHelpText>
    <label>Email Restriction</label>
    <type>Checkbox</type>
</CustomField>