force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__ExcludeFromTerritoryAssignment__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExcludeFromTerritoryAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the address is an exception and not to be aligned to a territory. This is used for Territory Alignment purposes.</description>
    <inlineHelpText>Indicates if the address is an exception and not to be aligned to a territory. This is used for Territory Alignment purposes.</inlineHelpText>
    <label>Exclude From Territory Assignment</label>
    <type>Checkbox</type>
</CustomField>