force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Fax2__c.field-meta.xml
<CustomField>
    <fullName>OCE__Fax2__c</fullName>
    <description>Alternate fax number for the Account at this address. This is used to store alternate fax numbers for Accounts in the system.</description>
    <inlineHelpText>Alternate fax number for the Account at this address. This is used to store alternate fax numbers for Accounts in the system.</inlineHelpText>
    <label>Fax 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>