force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Fax__c.field-meta.xml
<CustomField>
    <fullName>OCE__Fax__c</fullName>
    <description>Fax number for the Account at this address. This is used to store fax numbers for Accounts in the system.</description>
    <inlineHelpText>Fax number for the Account at this address. This is used to store fax numbers for Accounts in the system.</inlineHelpText>
    <label>Fax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>