force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__FaxRestriction__c.field-meta.xml
<CustomField>
    <fullName>OCE__FaxRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores Fax Restriction</description>
    <inlineHelpText>Stores Fax Restriction</inlineHelpText>
    <label>Fax Restriction</label>
    <type>Checkbox</type>
</CustomField>