force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__FormattedAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__FormattedAddress__c</fullName>
    <description>Formatted Address</description>
    <formula>OCE__Account__r.OCE__AccountFullName__c &amp; 
&apos;, &apos; 
&amp;
OCE__AddressLine1__c
&amp;
IF( ISBLANK(OCE__AddressLine2__c), &apos;&apos; , &apos;, &apos;&amp; OCE__AddressLine2__c )
&amp;
IF( ISBLANK(OCE__AddressLine3__c), &apos;&apos; , &apos;, &apos;&amp; OCE__AddressLine3__c )
&amp;
IF( ISBLANK(OCE__AddressLine4__c), &apos;&apos; , &apos;, &apos;&amp; OCE__AddressLine4__c )
&amp;
IF( ISBLANK(OCE__City__c), &apos;&apos;, &apos;, &apos;&amp; OCE__City__c )
&amp; 
IF( ISBLANK(OCE__State__c), &apos;&apos; , &apos;, &apos;&amp; OCE__State__c )
&amp; 
IF( ISBLANK(OCE__Country__c), &apos;&apos; , &apos;, &apos;&amp; OCE__Country__c ) 
&amp; 
IF( ISBLANK(OCE__ZipCode__c), &apos;&apos; , &apos;, &apos;&amp; OCE__ZipCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Address</label>
    <type>Text</type>
</CustomField>