force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Geo2__c.field-meta.xml
<CustomField>
    <fullName>OCE__Geo2__c</fullName>
    <description>Geography type code GEO2</description>
    <formula>OCE__Address__r.OCE__Geo2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo2</label>
    <type>Text</type>
</CustomField>