force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Geo3__c.field-meta.xml
<CustomField>
    <fullName>OCE__Geo3__c</fullName>
    <description>Geography type code GEO3</description>
    <formula>OCE__Address__r.OCE__Geo3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo3</label>
    <type>Text</type>
</CustomField>