force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeoLocation__c</fullName>
    <description>Latitude and longitude of the address. This is used for Mapping.</description>
    <formula>TEXT( OCE__Address__r.OCE__GeoLocation__Latitude__s )+&quot;, &quot;+ TEXT( OCE__Address__r.OCE__GeoLocation__Longitude__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latitude and longitude of the address. This is used for Mapping.</inlineHelpText>
    <label>GeoLocation</label>
    <type>Text</type>
</CustomField>