force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the account address is active or not.</description>
    <inlineHelpText>Indicates whether the account address is active or not.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>