force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsCopyTDDDData__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsCopyTDDDData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows to disable transfer SDL Information by Formulas from Address</description>
    <label>Copy SDL Data</label>
    <type>Checkbox</type>
</CustomField>