force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsDeletedOffline__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsDeletedOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the record has been deleted offline or not.</description>
    <inlineHelpText>Indicates whether the record has been deleted offline or not.</inlineHelpText>
    <label>Is Deleted Offline</label>
    <type>Checkbox</type>
</CustomField>