force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsInherited__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsInherited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the address was inherited from another.</description>
    <inlineHelpText>Indicates if the address was inherited from another.</inlineHelpText>
    <label>Inherited?</label>
    <type>Checkbox</type>
</CustomField>