force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the address serves as the Primary Address for the associated Account. This allows the Rep to understand if an address is primary vs. secondary, etc. There can only be one Primary address for an Account.</description>
    <inlineHelpText>Indicates if the address serves as the Primary Address for the associated Account. This allows the Rep to understand if an address is primary vs. secondary, etc. There can only be one Primary address for an Account.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>