force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsSLNEnabledOnList__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsSLNEnabledOnList__c</fullName>
    <description>Should SLN address validation image be displayed?</description>
    <formula>$Setup.OCE__StateLicenseNumberSettings__c.OCE__IsEnabledOnSearchList__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Should SLN address validation image be displayed?</inlineHelpText>
    <label>Enable SLN on List</label>
    <type>Checkbox</type>
</CustomField>