force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsTDDDLicenseExemption2__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsTDDDLicenseExemption2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If flag set as true - no SDL validation required for current Account Address.</description>
    <label>SDL Exemption</label>
    <type>Checkbox</type>
</CustomField>