force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsTDDDLicenseExemption__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsTDDDLicenseExemption__c</fullName>
    <description>If flag set as true - no SDL validation required for current Account Address</description>
    <formula>OR(
                IF(
                    OCE__IsCopyTDDDData__c,
                    OCE__Address__r.OCE__IsTDDDLicenseExemption__c,
                    null
                ),
                OCE__IsTDDDLicenseExemption2__c
            )</formula>
    <label>SDL Exemption</label>
    <type>Checkbox</type>
</CustomField>