force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsTemporarySbcAccountAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsTemporarySbcAccountAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is AccountAddress created as an interim record in process of finding duplicate accounts in Search Before Create (SBC) process.</description>
    <inlineHelpText>Interim record created as part of Search Before Create Process</inlineHelpText>
    <label>Is Temporary Sbc AccountAddress</label>
    <type>Checkbox</type>
</CustomField>