force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__IsValidated__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsValidated__c</fullName>
    <description>Is Validated</description>
    <formula>OCE__Address__r.OCE__IsValidated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Validated</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>