force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseEffectiveDate__c</fullName>
    <description>The date the License went into effect.</description>
    <inlineHelpText>The date the License went into effect.</inlineHelpText>
    <label>License Effective Date</label>
    <type>DateTime</type>
</CustomField>