force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseExpirationDate__c</fullName>
    <description>Date the License expires.</description>
    <inlineHelpText>Date the License expires.</inlineHelpText>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>