force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseFormulaPill__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseFormulaPill__c</fullName>
    <description>Formula to display pill image.</description>
    <formula>IF( OCE__Account__r.IsPersonAccount ,
  IF(
    OCE__LicenseFormulaValidation__c,
    IMAGE(&quot;/resource/OCE__ApolloIcons/png/pill-green.png&quot;, &quot;&quot;, 14, 14),
    IMAGE(&quot;/resource/OCE__ApolloIcons/png/pill-red.png&quot;, &quot;&quot;, 14, 14)
  ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Formula Pill</label>
    <type>Text</type>
</CustomField>