force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseFormulaState__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseFormulaState__c</fullName>
    <description>Formula for display State license image</description>
    <formula>IF(  OCE__Account__r.IsPersonAccount,
  IF(
    OCE__LicenseFormulaValidation__c,
    IMAGE(&quot;/resource/OCE__ApolloIcons/png/state-green.png&quot;, &quot;&quot;, 14, 37),
    IMAGE(&quot;/resource/OCE__ApolloIcons/png/state-red.png&quot;, &quot;&quot;, 14, 37)
  ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Formula State</label>
    <type>Text</type>
</CustomField>