force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseFormulaValidation__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseFormulaValidation__c</fullName>
    <description>Formula for validation license.</description>
    <formula>AND(!ISBLANK(OCE__LicenseNumber__c), OCE__LicenseExpirationDate__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Formula Validation</label>
    <type>Checkbox</type>
</CustomField>