force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseNumber__c</fullName>
    <description>License number that indicates if a doctor can sign for samples. This License is required for any doctors that will be signing for samples.</description>
    <inlineHelpText>License number that indicates if a doctor can sign for samples. This License is required for any doctors that will be signing for samples.</inlineHelpText>
    <label>License #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>