force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseStatus__c</fullName>
    <description>Indicates the current status of the License (New, Active, Inactive, Expired, Revoked, Probation). This status is maintained across all addresses for an Account in the same state.</description>
    <inlineHelpText>Indicates the current status of the License (New, Active, Inactive, Expired, Revoked, Probation). This status is maintained across all addresses for an Account in the same state.</inlineHelpText>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>