force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__LicenseTypeName__c.field-meta.xml
<CustomField>
    <fullName>OCE__LicenseTypeName__c</fullName>
    <description>The type if License given to the HCP. Examples include Practical Nurse or Physician&apos;s Assistant.</description>
    <inlineHelpText>The type if License given to the HCP. Examples include Practical Nurse or Physician&apos;s Assistant.</inlineHelpText>
    <label>License Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>