force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__MailRestriction__c.field-meta.xml
<CustomField>
    <fullName>OCE__MailRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores Mail Restriction</description>
    <inlineHelpText>Stores Mail Restriction</inlineHelpText>
    <label>Mail Restriction</label>
    <type>Checkbox</type>
</CustomField>