force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Notes__c.field-meta.xml
<CustomField>
    <fullName>OCE__Notes__c</fullName>
    <description>Comments about the address.</description>
    <inlineHelpText>Comments about the address.</inlineHelpText>
    <label>Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>