force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__OfflineCreatedById__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Globally unique string that identifies an offline created record.</description>
    <inlineHelpText>Globally unique string that identifies an offline created record.</inlineHelpText>
    <label>Offline Created by Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>