force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__OfflineLastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the User who last updated this record offline.</description>
    <inlineHelpText>ID of the User who last updated this record offline.</inlineHelpText>
    <label>Offline Last Modified by Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>