force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Phone2__c.field-meta.xml
<CustomField>
    <fullName>OCE__Phone2__c</fullName>
    <description>Alternate phone number for the Account at this address. This is used to store alternate phone numbers for Accounts in the system.</description>
    <inlineHelpText>Alternate phone number for the Account at this address. This is used to store alternate phone numbers for Accounts in the system.</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>