force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Phone4__c.field-meta.xml
<CustomField>
    <fullName>OCE__Phone4__c</fullName>
    <description>Alternate phone number.</description>
    <inlineHelpText>Alternate phone number.</inlineHelpText>
    <label>Phone 4</label>
    <type>Phone</type>
</CustomField>