force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__PreferredMail__c.field-meta.xml
<CustomField>
    <fullName>OCE__PreferredMail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the address is a preferred mailing address.</description>
    <inlineHelpText>Indicates if the address is a preferred mailing address.</inlineHelpText>
    <label>Preferred Mail</label>
    <type>Checkbox</type>
</CustomField>