force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__RequiresPriorAppointment__c.field-meta.xml
<CustomField>
    <fullName>OCE__RequiresPriorAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a prior appointment is required at this address. This allows the Rep to identify if they need to contact the Account ahead of time and schedule an appointment.</description>
    <inlineHelpText>Indicates if a prior appointment is required at this address. This allows the Rep to identify if they need to contact the Account ahead of time and schedule an appointment.</inlineHelpText>
    <label>Requires Prior Appointment</label>
    <type>Checkbox</type>
</CustomField>